# kunshan_333

./: .env.example  .gitignore  README.md  ocr_server.py  pyproject.toml  run.py  工业企业整治测试.xlsx  文件路径汇总5-7.xlsx
agent/: __init__.py  prompts.py  runner.py  tools.py
config/: templates.yaml
core/: __init__.py  checkpoint.py  excel_reader.py  excel_utils.py  extractor.py  llm_utils.py  ocr_cache.py  template_loader.py  verify.py
tests/: check_paths.py  debug_excel.py  diagnose.py  examine_excel.py  show_results.py  show_trace.py  test_run.py  verify_fix.py  测试清单.csv
tests/test_projects/张浦镇农污整治/: 合同.txt
tests/test_projects/新华路管网检测/: 中标通知书.txt  合同.txt
